attempting to fix z-index issue with search icon

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -51,27 +51,32 @@ nav{
             a{text-decoration: none;}
 
             .dropdown {
-                z-index: 1;
                 position: relative;
                 display: inline-block;
 
-                &:hover .dropdown-content {display: block;}
+                &:hover .dropdown-content {
+                    display: block;
+                }
+                /* &:hover .dropdown-content {
+                    position: absolute !important;
+                    z-index: 2 !important;
+                } */
 
                 &:hover .dropbtn {background-color: #F5F5F5;}
 
                 & .dropdown-content {
                     display: none;
-                    position: absolute;
+                    position: absolute !important;
                     background-color: #f1f1f1;
                     min-width: 13.8rem;
                     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                    z-index: 1;
+                    /* z-index: 2 !important; */
                     border-radius: 20px;
-                    
                     & a {
+                        position: relative !important;
                         font-size: 14px !important;
                         padding: 12px 12px;
-
+                        z-index: 10 !important   ;
                         text-decoration: none;
                         display: block;
                         &:first-child{
@@ -83,7 +88,11 @@ nav{
                             border-bottom-right-radius: 20px;
                         }
 
-                        &:hover {background-color: #ddd;}
+                        &:hover {
+                            background-color: #ddd;
+                            position: relative !important;
+                            z-index: 10 !important;
+                        }
                     }
                 }
 
@@ -119,14 +128,13 @@ aside{
 
     #search-bar{
         position: relative;
+        z-index: 0;
         padding-left: 25px;
         border-radius: 60px;
         border: 2px solid transparent;
-        /* height: 30px; */
         width: 195px;
         background-color:#F5F5F5;
         min-height: 60px;
-        /* width: 220px; */
         font-weight: 300 !important;
         font-size: 14px !important;
         font-family: "Lexend", sans-serif !important;
@@ -138,7 +146,6 @@ aside{
 
     .search-icon-wrapper{
         position: absolute;
-        z-index: 10;
         width: 100%;
         height: 100%;
         display: flex;
@@ -146,8 +153,9 @@ aside{
         align-items: center;
         
         #search-icon{
+            position: relative;
+            z-index: 1;
             margin-right: 15px;
-            
             &:hover{
                 height: 30px;
                 width: 30px;
